# madcommit

./: Cargo.toml  flake.nix  template.md
src/: config.rs  git.rs  main.rs
