[package]
name = "madcommit"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.9"
directories = "6.0.0"
genai = "0.3.4"
git2 = "0.20.0"
log = "0.4.26"
tempfile = "3.18.0"
tokio = { version = "1.44.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
